<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trasy</string>
    <string name="adults">Người lớn</string>
    <string name="adult_detail">(Trên 12 tuổi)</string>
    <string name="infants">Trẻ sơ sinh</string>
    <string name="infants_detail">(Dưới 2 tuổi)</string>
    <string name="childrens">Trẻ em</string>
    <string name="childerns_detail">(Dưới 12 tuổi)</string>
    <string name="one_way">Một Chiều</string>
    <string name="round_trip">Khứ Hồi</string>
    <string name="departure_date">Ngày Đi</string>
    <string name="return_date">Ngày Về</string>
    <string name="num_passenger">Số lượng hành khách</string>
    <string name="fa_custom_pick_date">Chọn ngày {fa-plus}</string>
    <string name="nearby_airport_text">{fa-map-marker} Các sân bay gần bạn</string>
    <string name="found_airport_text">{fa-globe} Các sân bay tìm thấy</string>
    <string name="depart_airport_text">Nơi Đi</string>
    <string name="return_airport_text">Nơi Đến</string>
    <string name="domestic_airport">Chỉ tìm các sân bay trong nước</string>
    <string name="choose_airport">Chọn sân bay</string>
    <string name="code_holder">XXX</string>
    <string name="city_holder">Thành Phố/Địa Điểm</string>
    <string name="no_airport">{fa-spinner spin} Không có sân bay.</string>
    <string name="wait_promt">Bạn vui lòng chờ một lát nhé . . .</string>
    <string name="result_header_string">Kết quả tìm kiếm</string>
    <string name="apply_string">Áp Dụng</string>
    <string name="flight_type"><u>Loại chuyến bay</u></string>
    <string name="filter_price"><u>Giá vé</u></string>
    <string name="filter_time"><u>Thời gian</u></string>
    <string name="filter_time_depart">Chuyến đi</string>
    <string name="filter_time_return">Chuyến Về</string>
    <string name="filter_total_found">(Tìm thấy <b>%1$d</b> chuyến bay)</string>
    <string name="filter_count">(<b>%1$d</b> chuyến bay)</string>
    <string name="txt_depart">Chuyến đi</string>
    <string name="txt_price_detail">Giá Vé</string>
    <string name="txt_return">Chuyến về</string>
    <string name="fa_total_time">{fa-clock-o} Tổng thời gian:</string>
    <string name="fa_wait_time">{fa-clock-o} Thời gian dừng chân:</string>
    <string name="fa_flight_number">{fa-pie-chart} Số chặng bay:</string>
    <string name="fa_flight_time">{fa-clock-o} Thời gian :</string>
    <string name="fa_aircraft">{fa-plane} Loại máy bay:</string>
    <string name="fa_class">{fa-ticket} Hạng bay:</string>
    <string name="fa_quality">{fa-star-half-o} Chất lượng:</string>
    <string name="fa_quantity">{fa-hashtag} Số lượng ghế còn:</string>
    <string name="fa_country">{fa-globe} Hãng bay nước :</string>
    <string name="btn_airline_web">Website</string>
    <string name="cancel">Huỷ</string>
    <string name="open_in_browser">Mở bằng trình duyệt</string>
    <string name="txt_adult_price">{fa-credit-card-alt} Giá vé cho mỗi người lớn</string>
    <string name="txt_children_price">{fa-money} Giá vé mỗi cho trẻ em</string>
    <string name="txt_infants_price">{fa-usd} Giá vé cho mỗi trẻ sơ sinh</string>
    <string name="txt_refundable">{fa-exclamation-triangle} Hoàn tiền khi huỷ vé</string>
    <string name="txt_change_penalties">{fa-exclamation-triangle} Thu phí khi đổi ngày </string>
    <string name="txt_time_number">{fa-times} <b>%1$d</b></string>
    <string name="txt_yes">{fa-check} CÓ</string>
    <string name="txt_no">{fa-times} KHÔNG</string>
    <string name="txt_long_wait">Ôi không! Bạn vẫn còn đang chờ sao. Ráng chờ thêm tý nữa thôi nhé!!!!</string>
    <string name="txt_success">Ta-daaaa! Đã tìm thấyc chuyến bay. Hãy chọn chuyến bay của bạn nào!!!!</string>

    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>

</resources>
